# wordome

./: .gitignore  Makefile  amazon_dump.html  environment.yaml  pyproject.toml  readme.md  ruff.toml  view_db.py  wordome_v1.db
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: abc  review.json  sites_config.json
src/wordome/: api.py  app.py  demo.py  demo2.py  demo3.py  emergency_content.html  ingestion_pipeline.py  main.py  webfetch_demo.py
src/wordome.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wordome/application/routes/: health.py  sandbox.py
src/wordome/domain/: __init__.py  review_section_detector.py  word_stats_extractor.py
src/wordome/domain/component/: __init__.py  base_scraper.py  html_scraper.py  site_parser.py  word_stats_extractor.py
src/wordome/domain/model/: data_model.py  product.py  review.py  word_stats.py
src/wordome/infrastructure/: __init__.py
src/wordome/infrastructure/component/: amazon_review_crawler.py  db_manager.py  web_fetcher.py  web_fetcher_manager.py  web_fetcher_playwright.py
src/wordome/infrastructure/database/: database_config.py  database_connection.py
src/wordome/infrastructure/scraping/: web_fetcher.py
src/wordome/resources/: urls.txt
src/wordome/routes/: __init__.py  health.py  sandbox.py
