[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordome"
version = "0.1.0"
description = "A word frequency analysis tool"
dependencies = [
    "beautifulsoup4",
    "curl-cffi",
    "fastapi",
    "uvicorn",
]

[project.scripts]
wordome = "wordome.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# ruff linter/formatter configuration
[tool.ruff]
extend = "ruff.toml"