[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wordome"
version = "0.1.0"
requires-python = ">=3.12"
description = "A word frequency analysis tool"
dependencies = [
    "beautifulsoup4",
    "curl-cffi",
    "fastapi",
    "uvicorn",
    "snowflake-connector-python>=3.7.0",
    "pyarrow>=15.0.0",
    "pydantic",
    "pydantic-settings"
]

[project.scripts]
wordome = "wordome.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# ruff linter/formatter configuration
[tool.ruff]
extend = "ruff.toml"